maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: not found: value get
  while(get(Y)>0 && estSurBiscuit()){
        ^Escaper:3: error: not found: value Y
  while(get(Y)>0 && estSurBiscuit()){
            ^